--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -37,6 +37,10 @@ Grey dark 3: #999
 
 }
 
+$bp-largest: 75em;    //1200px / 16
+$bp-large: 68.75em;    //1100px / 16
+$bp-medium: 56.25em;    //900px / 16
+
 * {
     margin: 0;
     padding: 0;
@@ -52,6 +56,10 @@ Grey dark 3: #999
 html {
     box-sizing: border-box;
     font-size: 62.5%; // 1rem = 10px, 10px/16px = 62.5%
+
+    @media only screen and (max-width: $bp-large) {
+       font-size: 50%;
+    }
 }
 
 body {
