--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -73,6 +73,7 @@
     align-items: center;
     align-self: stretch;
 
+
     & > * {
         padding: 0 2rem;
         cursor: pointer;
@@ -134,11 +135,24 @@
     list-style: none;
     margin-top: 3.5rem;
 
+    @media only screen and (max-width: $bp-medium) {
+        display: flex;
+        margin: 0;
+    }
+
     &__item {
         position: relative;
 
         &:not(:last) {
             margin-bottom: .5rem;
+
+            @media only screen and (max-width: $bp-medium) {
+                margin: 0;
+            }
+        }
+
+        @media only screen and (max-width: $bp-medium) {
+            flex: 1;
         }
     }
 
@@ -180,6 +194,11 @@
 
         display: flex;
         align-items: center;
+
+        @media only screen and (max-width: $bp-medium) {
+            justify-content: center;
+            padding: 2rem;
+        }
                 
        
     }
@@ -202,6 +221,10 @@
     text-align: center;
     padding: 2.5rem;
     color: var(--color-grey-light-4);
+
+    @media only screen and (max-width: $bp-medium) {
+        display: none;
+    }
 }
 
 ///////////////////////////////////////
@@ -393,7 +416,7 @@
     }
 
     &__friends {
-
+        display: flex;
     }
 
     &__photo {
@@ -404,7 +427,7 @@
         border: 3px solid #fff;
 
         &:not(:last-child) {
-            margin-right: -1.5rem;
+            margin-right: -2rem;
         }
 
     }
@@ -421,6 +444,11 @@
     margin-bottom: 3.5rem;
     position: relative;
     overflow: hidden;
+
+    @media only screen and (max-width: $bp-medium) {
+        padding: 2rem;
+        margin-bottom: 3rem;
+     }
 
     &__text {
         margin-bottom: 2rem;
@@ -481,6 +509,10 @@
 .cta {
     padding: 3.5rem 0;
     text-align: center;
+
+    @media only screen and (max-width: $bp-medium) {
+        padding: 2.5rem 0;
+     }
 
     &__book-now {
         font-size: 1.5rem;
