--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -13,6 +13,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
+    @media only screen and (max-width: $bp-smallest) {
+       order: 1;
+       flex: 0 0 100%;
+       background-color: var(--color-grey-light-2);
+    }
     
 
     &__input {
@@ -199,6 +205,11 @@
             justify-content: center;
             padding: 2rem;
         }
+
+        @media only screen and (max-width: $bp-medium) {
+           flex-direction: column;
+           padding: 1.5rem .5rem;
+        }
                 
        
     }
@@ -208,6 +219,13 @@
         height: 1.75rem;
         fill: currentColor;
         margin-right: 2rem;
+
+        @media only screen and (max-width: $bp-medium) {
+            margin-right: 0;
+            margin-bottom: .7rem;
+            width: 1.5rem;
+            height: 1.5rem;
+        }
         
     }
 
@@ -245,6 +263,11 @@
     display: flex;
     align-items: center;
     border-bottom: var(--line);
+
+    @media only screen and (max-width: $bp-medium) {
+        font-size: 1.8rem;
+        padding: 1.25rem 2rem;
+    }
 
     &__heading {
         font-size: 2rem;
@@ -289,17 +312,29 @@
         padding: 0 2.25rem;
         color: #fff;
         align-self: stretch;
+
+        @media only screen and (max-width: $bp-medium) {
+           padding: 0 1.5rem;
+        }
     }
 
     &__rating-average {
         font-size: 2rem;
         font-weight: 300;
         margin-bottom: -3px;
+
+        @media only screen and (max-width: $bp-medium) {
+            font-size: 1.8rem;
+         }
     }
 
     &__rating-count {
         font-size: .8rem;
         text-transform: uppercase;
+
+        @media only screen and (max-width: $bp-medium) {
+            font-size: 1.5rem;
+         }
 
     }
 }
